--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -5,12 +5,12 @@
     width: 27%;
     margin: 2%;
     padding: 2px;
-    /* box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px; */
-    padding: 5px;
-    
+    height: 100%;
+    padding: 5px;    
 }
 img{
     width: 100%;
+    height: 220px;
     border-radius: 6px;
 }
 .titel{
@@ -37,6 +37,9 @@ a{
     cursor: pointer;
     border-radius: 3px;
     font-size: 20px;
+    position: relative;
+    bottom: 0;
+
 }
 .moreBtn:hover{
     transform: scale(1.02);
