--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 *{
   font-family: 'Montserrat', sans-serif;
+  scroll-behavior: smooth;
 }
 .App {
   text-align: center;
-  position: absolute;
-  top: 0;
+  z-index: -1;
 }
 
 .App-logo {
