--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -12,6 +12,11 @@ img{
     width: 100%;
     height: 220px;
     border-radius: 6px;
+    cursor: pointer;
+    transition:0.3s ease-in-out;
+}
+img:hover{
+    transform: scale(1.1);
 }
 .titel{
     font-weight: bold;
