--- a/src/components/News/News.css
+++ b/src/components/News/News.css
@@ -11,7 +11,7 @@ h2{
 
 }
 input[type="search"] {
-    border: 1px solid #d1d1d1;
+    border: 1px solid #a3a3a3;
     font-size: 18px;
     width: 30%;
     padding: 5px 15px;
