--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -49,3 +49,22 @@ a{
 .moreBtn:hover{
     transform: scale(1.02);
 }
+@media(max-width : 1040px){
+  .Card{
+      width: 40%;
+  }
+}
+@media(max-width : 700px){
+    .Card{
+        width: 80%;
+    }
+    .Card .titel{
+        font-size: 16px;
+    }
+    .Card .description{
+        font-size: 14px;
+    }
+    .Card .moreBtn {
+        font-size: 14px;
+    }
+}
