--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,11 +3,12 @@
   position: absolute;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   width: 100%;
 }
 
 .header img {
-  height: 30px;
+  height: 100%;
   width: 100px;
   display: block;
   margin-left: 20px;
