--- a/src/components/News/News.css
+++ b/src/components/News/News.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 
 }
 h2{
@@ -33,4 +34,24 @@ input[type="search"]:focus {
     flex-wrap: wrap;
     justify-content: space-between;
     margin-top: 30px;
+}
+@media(max-width : 900px){
+    input[type="search"]{
+        width: 60%;
+    }
+    input[type="search"]:focus{
+        width: 30%;
+    }
+}
+
+@media(max-width : 600px){
+    input[type="search"]{
+        width: 80%;
+    }
+    input[type="search"]:focus{
+        width: 50%;
+    }
+    .Cards{
+        justify-content: center;
+    }
 }
